see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

30-Dec-2010 Jean-Marie Simonet
 # [#24035] Enable Resize in TinyMCE Extended Mode. Thanks Hans-Stefan and Bill.
 # [#22564] Temp folder has to include JPATH_ROOT for gz extension upload to work. Thanks Sam.
 
29-Dec-2010 Jean-Marie Simonet
 # [#24027] Allowing site only language packs to load xx-XX.lib_joomla.ini file
 # [#24026] [patch] language 'JError_Checkin_saved' should be 'JLIB_APPLICATION_ERROR_CHECKIN_FAILED'. Thanks Bill and Ray.
 $ [#24017] COM_CONFIG_ACTION_EDITOWN_DESC conceptual issue. Thanks Bill
 # [#23817] Error in installation (joomla.sql). Thanks Mark and Elin
 # [#23919] Admin menu shows global checkin link to those without such rights. Thanks Bill. 
 
28-Dec-2010 Jean-Marie Simonet
 # [#23983] Admin username and password being saved as FTP credentials if you aren't careful. Thanks Elin.
 $ [#24011] No_Images_Found Text String Missing. Thanks Bill.
 $ Adding a framework string necessary when no non en-GB site/admin langague pack installed
 # [#24015] Web services configuration option still there. Thanks Sam and Rouven.
 $ Missing lang strings
 # [#23938] Fix a couple of issues related to path configuration. Thanks Rouven.
 $ Modifying some language strings in installation ini file.
 
27-Dec-2010 Jean-Marie Simonet
 # [#23942] Accessibility fix for sliders. Thanks Andrea.
 $# [#23997] Refactoring language strings for permissions tooltips and Note. + reordering some inis.
 # [#23998] Incorrect description for permissions configure options. Thanks Bill.
 $ Correcting inconsistent keys and reordering com_users.ini

26-Dec-2010 Jean-Marie Simonet